--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,16 +9,25 @@
     </head>
     <body>
         <div>
-            <h1><a href="">Django Girls Blog</a></h1>
+            <h1 class="page-header">
+              <a href="">Django Girls Blog</a></h1>
         </div>
 
-        {% for post in posts %}
-          <div>
-              <p>published: {{ post.published_date }}</p>
-              <h1><a href="">{{ post.title }}</a></h1>
-              <p>{{ post.text|linebreaksbr }}</p>
+        <div class="content container">
+      <div class="row">
+          <div class="col-md-8">
+          {% for post in posts %}
+              <div class="post">
+                  <div class="date">
+                      {{ post.published_date }}
+                  </div>
+                  <h1><a href="">{{ post.title }}</a></h1>
+                  <p>{{ post.text|linebreaks }}</p>
+              </div>
+          {% endfor %}
           </div>
-        {% endfor %}
+      </div>
+  </div>
 
     </body>
 </html>
